--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "ioredis": "^5.8.2",
+    "joi": "^18.0.2",
     "nodemon": "^3.1.11",
     "pg": "^8.16.3",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
+    "pino-roll": "^4.0.0",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.3"
   }
 }
